bat.string1.lessons.bat.string1.StringMatch.scala.error
stringMatch:8: error: illegal start of simple expression
    }
    ^